Implemented initial support for Bosch BMP388
This is a driver for Bosch BMP388. The driver uses sources
supplied by Bosch, which have been gathered here:
https://github.com/BoschSensortec/BMP3-Sensor-API

With the exception of one extra include directive in bmp3_defs.h,
the sources supplied by Bosch are unchanged.

--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -50,6 +50,8 @@ source "drivers/sensor/bmi160/Kconfig"
 
 source "drivers/sensor/bmm150/Kconfig"
 
+source "drivers/sensor/bmp388/Kconfig"
+
 source "drivers/sensor/ccs811/Kconfig"
 
 source "drivers/sensor/dht/Kconfig"
