--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory_ifdef(CONFIG_BME680		bme680)
 add_subdirectory_ifdef(CONFIG_BMG160		bmg160)
 add_subdirectory_ifdef(CONFIG_BMI160		bmi160)
 add_subdirectory_ifdef(CONFIG_BMM150		bmm150)
+add_subdirectory_ifdef(CONFIG_BMP388		bmp388)
 add_subdirectory_ifdef(CONFIG_CCS811		ccs811)
 add_subdirectory_ifdef(CONFIG_DHT			dht)
 add_subdirectory_ifdef(CONFIG_ENS210		ens210)
